--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <h1>App Component</h1>
+<h1>App Componenttt</h1>
 <!-- <img src="../assets/fashion1.jpg" height="250px" width="250x">
 <app-student></app-student> -->
 <router-outlet></router-outlet>
